# SpaceFight

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  GameSprite.cpp  GameSprite.h  LICENSE  Logger.cpp  Logger.h  README.md  SFML_Game.cbp  SpaceFight.cbp  SpaceFight.cpp  SpaceFight.ini  config.yaml  easylogging.cfg  init.lua  logging.conf  main.cpp
contrib/: INIReader.cpp
contrib/spdlog/: tweakme.h
data/: Player.lua  Player.yaml  player.yaml
game/: config.yaml  enemy.yaml  player.yaml
include/: Console.h  Enemy.h  Engine.h  Engine.hpp  Game.h  GameEnemy.h  GamePlayer.h  GameSprite.h  LuaDataReader.h  Player.h  Sprite.h  Sprite.hpp  logger.h  sfml-utils.hpp  utilities.hpp  utils.hpp  yaml-utils.hpp
src/: Console.cpp  Enemy.cpp  Engine.cpp  Game.cpp  GameEnemy.cpp  GamePlayer.cpp  GameSprite.cpp  GameSprite.h  JustAGame.cpp  LuaDataReader.cpp  Player.cpp  SpaceFight.cpp  Sprite.cpp  jage.cpp  sfml-utils.cpp  utilities.cpp  utils.cpp  yaml-utils.cpp
